test/corpus/assembly.txt
============================
Test assembly
============================

##main
@haha=
helloworld
@great
haha
@haha
great

---

(source_file
 (assembly_header)
 (section)
 (codeline)
 (section_ref)
 (codeline)
 (section_ref)
 (codeline))
