test/corpus/mix_all.txt
============================
Mix section, section ref and code lines
============================

@haha=
helloworld
@great
haha
@haha
great

---

(source_file
 (section)
 (codeline)
 (section_ref)
 (codeline)
 (section_ref)
 (codeline))
