test/corpus/section_filename.txt
============================
Test with section filename
============================

@../hello_world.lua=
helloworld
haha
great

---

(source_file
  (section)
  (codeline)
  (codeline)
  (codeline))
