test/corpus/star_section.txt
============================
Test star section name
============================

@*=
helloworld
@great
haha
@haha
great

---

(source_file
 (section)
 (codeline)
 (section_ref)
 (codeline)
 (section_ref)
 (codeline))
